2012-05-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat) Return uid and
	gid as real numbers.  They could run out of integer range on cygwin.

2012-04-23  Chong Yidong <cyd@gnu.org>

	* tramp.el (tramp): Fix docstring.

2012-04-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-copy-size-limit): Fix docstring.
	(tramp-do-copy-or-rename-file-out-of-band): Better trace format.

2012-04-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password): Let-bind
	`enable-recursive-minibuffers' to t.

2012-04-19  Chong Yidong <cyd@gnu.org>

	Remove * characters from the front of variable docstrings.

2012-04-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties): Let-bind
	`print-length' and `print-level' to nil, in order to avoid
	truncation.  Reported by Christopher Schmidt
	<christopher@ristopher.com>.

2012-04-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-send-command): Apply
	`tramp-compat-call-process' instead of `tramp-local-call-process'.
	Reported by Magnus Henoch <magnus.henoch@gmail.com>.

2012-04-01  Chong Yidong  <cyd@gnu.org>

	* tramp.el (tramp-file-name-for-operation): Rename
	file-subdir-of-p to file-in-directory-p.

2012-03-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message-show-progress-reporter-message): New defvar.
	(tramp-with-progress-reporter): Use it.  We cannot use
	`tramp-message-show-message' here, because this suppresses also
	error buffers.

2012-03-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-copy-directory): Fix error in
	condition-case syntax.

2012-03-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-shell-prompt-pattern): Allow "[]" style prompts.
	(Bug#11065)

2012-03-17  Michael Albinus  <michael.albinus@gmx.de>
