@@ -1,3 +1,10 @@
+2012-06-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name-handler): If `debug-on-error' is set,
+	propagate an error unchanged.
+	(tramp-check-for-regexp): Search from buffer end, in order to
+	avoid "Stack overflow in regexp matcher".
+
 2012-05-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-do-file-attributes-with-stat)
